bookinfo-mysql-multiple-ns/ossm/back/mysql-egress/svc-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: back
spec:
  ports:
    - protocol: TCP
      port: 3306
      name: tcp-3306
