bookinfo-mysql-multiple-ns/ossm/back/mysql-egress/dr-tcp-egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: tcp-egress
  namespace: back
spec:
  exportTo:
  - .
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: v2-mysql
    trafficPolicy:
      tls:
        mode: DISABLE
