bookinfo-mysql-multiple-ns/ossm/back/mysql-egress/se-mysql-custom.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: mysql
  namespace: back
spec:
  exportTo:
  - .
  hosts:
  - "mysql.external"
  location: MESH_INTERNAL
  ports:
  - name: tcp
    number: 3306
    protocol: TCP
